feat(api employee): APIs departments CRUD, employees CRUD, and department assignment endpoints
