# apps/api/app/blueprints/employee_department_blueprint.rb
@@ -1,0 +1,7 @@
+class EmployeeDepartmentBlueprint < Blueprinter::Base
+  identifier :id
+
+  fields :assigned_date, :created_at, :updated_at
+
+  association :department, blueprint: DepartmentBlueprint
+end
